fix build on npm i

--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "description": "Shared TypeScript types library for Let's Chat",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    }
+  },
   "files": [
     "dist"
   ],
@@ -11,7 +17,8 @@
     "build": "tsc",
     "watch": "tsc --watch",
     "clean": "rm -rf dist",
-    "prepublishOnly": "npm run clean && npm run build"
+    "prepublishOnly": "npm run clean && npm run build",
+    "postinstall": "npm run build"
   },
   "keywords": [
     "typescript",
