--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     }
   },
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
     "clean": "rm -rf dist",
+    "prepack": "npm run build",
     "prepare": "npm run build",
     "prepublishOnly": "npm run clean && npm run build"
   },
@@ -31,4 +33,3 @@
     "typescript": "^5.3.3"
   }
 }
-
