--- a/package.json
+++ b/package.json
@@ -2,22 +2,24 @@
   "name": "@letschat/types",
   "version": "1.0.0",
   "description": "Shared TypeScript types library for Let's Chat",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "index.js",
+  "types": "index.d.ts",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "default": "./dist/index.js"
+      "types": "./index.d.ts",
+      "default": "./index.js"
     }
   },
   "files": [
-    "dist",
-    "src"
+    "index.d.ts",
+    "index.js"
   ],
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && npm run bundle && npm run create-js",
+    "create-js": "node -e \"require('fs').writeFileSync('index.js', 'module.exports = {};\\n')\"",
+    "bundle": "dts-bundle-generator -o index.d.ts --project tsconfig.json --no-banner src/index.ts",
     "watch": "tsc --watch",
-    "clean": "rm -rf dist",
+    "clean": "rm -rf dist index.d.ts index.js index.d.ts.map index.js.map",
     "prepack": "npm run build",
     "prepare": "npm run build",
     "prepublishOnly": "npm run clean && npm run build"
@@ -30,6 +32,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "dts-bundle-generator": "^9.0.0"
   }
 }
