reshuffle package.json cont

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "build": "tsc",
     "watch": "tsc --watch",
     "clean": "rm -rf dist",
-    "prepack": "npm run build"
+    "prepack": "npm run build",
+    "prepare": "npm run build"
   },
   "keywords": ["typescript", "types", "letschat"],
   "author": "",
